--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,18 @@ services:
       - NODE_ENV=development
     volumes:
       - ./src:/usr/src/app/src
+  postgres_db:
+    image: postgres:14-alpine
+    container_name: postgres_db
+    restart: always
+    environment:
+      - POSTGRES_USERNAME=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
