Connecting Database, Creating API Register and Login

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
+version: '3.8'
+
 services:
-  socialdise_api:
-    build: 
+  socialdise:
+    build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - "3000:3000"
-    environment:
-      - PORT=3000
-      - NODE_ENV=development
+    env_file:
+      - .env
     volumes:
-      - ./src:/usr/src/app/src
+      - ./ca.pem:/app/ca.pem
