--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "passport": "^0.7.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
